--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.1.5" targetFramework="net45" />
   <package id="EPPlus" version="3.0.0.2" targetFramework="net45" />
+  <package id="fasterflect" version="2.1.0" targetFramework="net45" />
   <package id="ImageResizer" version="3.3.3" targetFramework="net45" />
   <package id="ImageResizer.Plugins.PrettyGifs" version="3.3.3" targetFramework="net45" />
   <package id="iTextSharp" version="5.3.3" targetFramework="net45" />
